Tests/Negative/DereferencingNothPointer.mr
fun main(): i32 {
    var p: *noth = nil;
    var x: i32 = *p; // Error: Cannot dereference pointer to 'noth'
    return 0;
}
